# tetris

./: .gitignore  config.xml  firestarter.xml  index.html  lang.txt  readme.markdown  soundsnap_license.txt  test.xml  tetris  tetris.xml
data/shaders/: font.frag  font.vert  passthroughalphamask.frag  passthroughalphamask.vert  passthroughwithcolour.frag  passthroughwithcolour.vert  passthroughwithcolourrect.frag
project/: CMakeLists.txt  tetris.vcxproj
src/: application.cpp  application.h  cGame.cpp  cGame.h  main.cpp  settings.cpp  settings.h  states.cpp  states.h  tetris.cpp  tetris.h
